# blog

./: Django Commands.txt  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  settings.py  urls.py
app/: admin.py  forms.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_tag_post_tags.py  0003_post_view_count.py  0004_comments.py  0005_comments_parent.py  0006_subscribe.py  0007_post_is_featured.py  0008_post_author.py  0009_profile.py  0010_websitemeta.py  0011_post_bookmarks.py  0012_post_likes.py
app/static/app/: style.css  url.js
app/templates/app/: about.html  author.html  bookmarked_posts.html  index.html  liked_posts.html  post.html  search.html  tag.html
app/templates/registration/: logged_out.html  login.html  signup.html
blog/: settings.py  urls.py  wsgi.py
blog-app-template/pages/: allpost.html
staticfiles/: staticfiles.json
staticfiles/app/: style.bbcb4c3736e9.css  style.css.br  url.bb41ee2693c6.js  url.bb41ee2693c6.js.br
staticfiles/images/: author.svg.br  person1.svg.br
templates/: base.html
